# csci-5611

./: README.md
assignment1/: .gitignore  CMakeLists.txt  README.md  check-in.md
assignment1/images/: check-in.mov
assignment1/models/: fountain.blend
assignment1/src/: CMakeLists.txt  camera.cpp  main.cpp  p_ball.cpp  p_fire.cpp  p_magic.cpp  p_snow.cpp  p_water.cpp  particle_system.cpp
assignment1/src/include/: camera.h  p_ball.h  p_fire.h  p_magic.h  p_snow.h  p_water.h  particle_system.h
assignment1/src/shaders/: particle_fragment.glsl  particle_vertex.glsl  phong_fragment.glsl  phong_vertex.glsl
assignment2/: .gitignore  CMakeLists.txt  README.md  check-in.md
assignment2/src/: CMakeLists.txt  camera.cpp  main.cpp  s_flag.cpp  spring_system.cpp
assignment2/src/include/: camera.h  s_flag.h  spring_system.h
assignment2/src/shaders/: flag_fragment.glsl  flag_vertex.glsl  phong_fragment.glsl
assignment3/: .gitignore  CMakeLists.txt  README.md  check-in.md
assignment3/src/: CMakeLists.txt  camera.cpp  crowd.cpp  edge.cpp  graph.cpp  main.cpp  path.cpp  vertex.cpp
assignment3/src/include/: crowd.h  edge.h  graph.h  path.h  vertex.h
assignment3/src/shaders/: dumb_fragment.glsl  phong_fragment.glsl  phong_vertex.glsl
final/: .gitignore  CMakeLists.txt  README.md
final/cmake/: FindSDL2.cmake
final/src/: CMakeLists.txt  camera.cpp  main.cpp  sample_demo.cpp  sound.cpp  sph_fluid.cpp  spring_system.cpp
final/src/include/: camera.h  config.h.in  sample_demo.h  sound.h  sph_fluid.h  spring_system.h
final/src/shaders/: line_fragment.glsl  line_vertex.glsl  particle_fragment.glsl  particle_vertex.glsl  phong_vertex.glsl
